--- a/DFS.ipynb
+++ b/DFS.ipynb
@@ -17,8 +17,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class DFS(object):\n",
@@ -26,23 +28,23 @@
     "        print(\"%s \"%node.name)\n",
     "        for n in node.adjacencyList:\n",
     "            if not n.visited:\n",
-    "                dfs(n)"
+    "                self.dfs(n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'dfs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-57a6cfd8ae25>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mAlgo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDFS\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mdfs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'dfs' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A \n",
+      "B \n",
+      "D \n",
+      "E \n",
+      "C \n"
      ]
     }
    ],
@@ -60,7 +62,7 @@
     "\n",
     "Algo = DFS()\n",
     "\n",
-    "dfs(node1)"
+    "Algo.dfs(node1)"
    ]
   }
  ],
