--- a/Recursion.ipynb
+++ b/Recursion.ipynb
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -281,6 +281,41 @@
     "if __name__ == '__main__':\n",
     "    x = [1, 2, 4, 5, 6, 8, 7, 4]\n",
     "    print(linear_sum(x, len(x)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Power function using recursion "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3125\n"
+     ]
+    }
+   ],
+   "source": [
+    "def power2(x, n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    partial = power2(x, n // 2)\n",
+    "    result = partial * partial\n",
+    "    if n % 2 == 1:\n",
+    "        result *= x\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    print(power2(5, 5))"
    ]
   }
  ],
