--- a/Recursion.ipynb
+++ b/Recursion.ipynb
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -316,6 +316,120 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    print(power2(5, 5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Binary Sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "def binary_sum(S, start, stop):\n",
+    "    if start >= stop:\n",
+    "        return 0\n",
+    "    elif start == stop - 1:\n",
+    "        return S[start]\n",
+    "    else:\n",
+    "        mid = (start + stop) // 2\n",
+    "        return binary_sum(S, start, mid) + binary_sum(S, mid, stop)\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    S = [1, 2, 3, 4, 5]\n",
+    "    print(binary_sum(S, 0, len(S)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A non-recursive implementation of Binary Search\n",
+    "Eliminating Tail Recursion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def binary_search_iterative(data, target):\n",
+    "    low = 0\n",
+    "    high = len(data) - 1\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if target == data[mid]:\n",
+    "            return True\n",
+    "        elif target < data[mid]:\n",
+    "            high = mid - 1\n",
+    "        else:\n",
+    "            low = mid + 1\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    data = [1, 2, 3, 4, 5]\n",
+    "    target = 2\n",
+    "    print(binary_search_iterative(data, target))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Non Recursive implementation of reversing elements "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8]\n",
+      "[8, 7, 6, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse_iterative(S):\n",
+    "    start, stop = 0, len(S)\n",
+    "    while start < stop - 1:\n",
+    "        S[start], S[stop - 1] = S[stop - 1], S[start]\n",
+    "        start, stop = start + 1, stop - 1\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    S = [1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "    print(S)\n",
+    "    reverse_iterative(S)\n",
+    "    print(S)"
    ]
   }
  ],
