--- a/Detailed Theory of DS and Algos/Recursion.ipynb
+++ b/Detailed Theory of DS and Algos/Recursion.ipynb
@@ -373,6 +373,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.083333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "def harmonic_number(n):\n",
+    "    if n <= 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 1/n + harmonic_number(n-1)\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    print(harmonic_number(4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Describe a recursive function for converting a string of digits into the integer it represents. For example, $13531$ represents the integer $13,531$"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
