--- a/Detailed Theory of DS and Algos/DataStructures/Linked Binary Tree.ipynb
+++ b/Detailed Theory of DS and Algos/DataStructures/Linked Binary Tree.ipynb
@@ -2,11 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (<ipython-input-1-a1338331fef5>, line 175)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-a1338331fef5>\"\u001b[0;36m, line \u001b[0;32m175\u001b[0m\n\u001b[0;31m    return self.make_position(self.root)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+     ]
+    }
+   ],
    "source": [
     "class Tree:\n",
     "    # nested position class\n",
